# VOTR

./: .cv-example  .gitignore  CMakeLists.txt  CompressiveTracker.cpp  Fragments_Tracker.h  LICENSE  README.MD  README.md  README.txt  RunTracker.cpp  computeCropParams.m  cos2kernel.m  cv-evaluate  cvbb.py  cveval.py  cvseq.py  cvtrack.py  distanceDF5.m  distanceDF6.m  findTarget.m  fragtrack_envelope.cpp  gausssmooth.m  getChannelMeanVar.m  getCoherenceCalcObjects.m  get_feature_map.m  get_scale_subwindow.m  histN_BG.m  intHistToHist3D.m  intHistToHist5D.m  mexImgToIntHist5D.c  mexIntHistToHist3D.c  ndhistogram.m  resample_particles.m  scan_directory.m  scm_challenge.m  setup.txt  smoothDF.m  tld_challenge.m  track.m  tracker_pf_initialize.m  (+9 more)
@ChannelEnc1D/: ChannelEnc1D.m  centers.m  setChanConfig.m
Affine Sample Functions/: affineSample.m  affineTrainG.m  affineTrainL.m
CT/: CMakeLists.txt  CompressiveTracker.h  config.txt
CppMT/: README.md
DSST/: README.md  get_subwindow.m  wrapper.m
FragTrack/: CMakeLists.txt  Fragments_Tracker.cpp  README.md  emd.h
HoughTrack/: CMakeLists.txt  README.md
HoughTrack/code/: capture.cpp  features.cpp  features.h  fern.cpp  parameters.cpp  parameters.h  utilities.cpp
LearnMatch/: CMakeLists.txt  README.md  config.txt
LearnMatch/src/: BinaryDescriptor.inl  BinaryUtils.h  Config.cpp  FloatDescriptor.h  FloatDescriptor.inl  LinearSVM.cpp  LinearSVM.h  Prosac.h  Prosac.inl  Stats.cpp  Timer.h  Utils.h  Video.cpp  vot.hpp
SCM/: README.md  demo.m  displayResult_sf.m  vgg_kmiter.cxx  vot_initialize.m
SCM/spams-matlab/: compile.m  run_matlab.sh
SCM/spams-matlab/dags/: dag.h
SCM/spams-matlab/dags/mex/: mexCountConnexComponents.cpp  mexCountPathsDAG.cpp  mexRemoveCyclesGraph.cpp
SCM/spams-matlab/decomp/: decomp.h  lsqsplx.h  projsplx.h
SCM/spams-matlab/decomp/mex/: mexDecompSimplex.cpp  mexLasso.cpp
SCM/spams-matlab/dictLearn/: arch.h  dicts.h
SCM/spams-matlab/dictLearn/mex/: mexArchetypalAnalysis.cpp
SCM/spams-matlab/doc/: doc_spams.haux  doc_spams.hbbl  doc_spams.htoc  doc_spams.tex  main.bib  style.css
SCM/spams-matlab/doc/html/: doc_spams.html  doc_spams001.html  doc_spams002.html  doc_spams003.html  doc_spams004.html  doc_spams005.html  doc_spams006.html  doc_spams007.html  doc_spams008.html  doc_spams009.html  index.html
SCM/spams-matlab/image/: image.h
SCM/spams-matlab/image/mex/: mexCombinePatches.cpp  mexConvFista.cpp  mexExtractPatches.cpp
SCM/spams-matlab/linalg/: cblas_alt_template.h  linalg.h
SCM/spams-matlab/prox/: fista.h  groups-graph.h  mexgrouputils.h  surrogate.h
SCM/spams-matlab/prox/mex/: mexFistaFlat.cpp  mexFistaGraph.cpp  mexFistaPathCoding.cpp  mexFistaTree.cpp  mexGroupStructOfString.cpp  mexIncrementalProx.cpp  mexReadGroupStruct.cpp  mexSimpleGroupTree.cpp
SCM/spams-matlab/src_release/: mexArchetypalAnalysis.m  mexCombinePatches.m  mexExtractPatches.m  solverPoisson.m
SCM/spams-matlab/test_release/: test_FistaFlat.m  test_IncrementalProx.m  test_StochasticProx.m  test_archetypalAnalysis.m  test_image.m  test_solverPoisson.m
SIR-PF/: README.md  compile.m  create_particles.m  mexImgToIntHist3D.c  mexIntHistToHist5D.c  ndhistogram_coeff.m  sample_gaussian.m  test_pf.m  tracker_pf_update.m
STRUCK/: CMakeLists.txt  README.md  config.txt
STRUCK/sequences/: README.txt
STRUCK/src/: Config.h  Features.cpp  Features.h  HaarFeatures.cpp  HaarFeatures.h  HistogramFeatures.cpp  HistogramFeatures.h  ImageRep.cpp  ImageRep.h  Kernels.h  LaRank.cpp  LaRank.h  MultiFeatures.h  RawFeatures.cpp  RawFeatures.h  Rect.h  Sample.h  Sampler.cpp  Tracker.cpp  main.cpp  vot.hpp
STRUCK/src/GraphUtils/: GraphUtils.cpp
TLD/: README.md  run_TLD.m
TLD/bbox/: bb2pts.m  bbBR.m  bbHeight.m  bbTL.m  bbWidth.m  bbX.m  bbY.m  pts2bb.m
code/: capture.h  fern.h  main.cpp  utilities.h
qwsEDFT/: findTargetHier.m  img2df.m
qwsEDFT/@ChannelEnc1D/: basisMatrix.m  decode.m  decodeImg.m  encode.m  encodeDensity.m  encodeImg.m
sample/: sample.conf
src/: BinaryDescriptor.h  BinaryUtils.inl  BinaryWeightVector.h  BinaryWeightVector.inl  Config.cpp  Config.h  Detector.cpp  Detector.h  Features.h  HaarFeature.cpp  HaarFeature.h  ImageRep.cpp  ImageRep.h  LaRank.cpp  Model.cpp  Model.h  MultiFeatures.cpp  RawFeatures.cpp  Rect.h  RobustHomography.cpp  RobustHomography.h  Sampler.h  Stats.h  Tracker.h  Utils.cpp  Video.h  main.cpp
